fix: Input - text overflow when there is addonRight

--- a/src/components/Input/Input.styl
+++ b/src/components/Input/Input.styl
@@ -130,6 +130,9 @@ $paddingSide = 12px
   pointer-events none
 
 .label
+  &.hasAddonRight
+    padding-right 2em
+
   .isTextArea &
     max-height 40px
 
